2008-05-05  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Darin.
        
        <rdar://problem/5865171> REGRESSION: Creating a new quote places caret at beginning of quote instead of the end

        * WebView/WebView.mm:
        (-[WebView _updateSettingsFromPreferences:]): Disable Range mutation on changes to
        the document for Tiger and Leopard Mail.  There is code in Mail that does it, and
        the two interfere.

2008-05-05  Sam Weinig  <sam@webkit.org>

        Reviewed by Tim Hatcher.

        Make the Inspector's localizable strings file match the format used by Dashboard widgets.

        * WebCoreSupport/WebInspectorClient.mm:
        (WebInspectorClient::localizedStringsURL):

2008-05-05  Anders Carlsson  <andersca@apple.com>

        Reviewed by Jess.

        Apparently preflighting can cause hangs for some reason. Revert this for now.
        
        * Plugins/WebNetscapePluginPackage.m:
        (-[WebNetscapePluginPackage _initWithPath:]):
        * Plugins/WebPluginPackage.m:
        (-[WebPluginPackage initWithPath:]):

2008-05-05  Darin Adler  <darin@apple.com>

        Reviewed by Mitz.

        - https://bugs.webkit.org/show_bug.cgi?id=18789
          fix some shouldCloseWithWindow edge cases

        * WebView/WebView.mm:
        (-[WebView viewWillMoveToWindow:]): Fix bug where we would stop observing the
        NSWindowWillCloseNotification if the view was moved out of the window but still
        had that window set as the host window. Also make sure this function doesn't do
        anything if the WebView is already closed.
        (-[WebView setHostWindow:]): Ditto.

2008-05-04  David Kilzer  <ddkilzer@apple.com>

        Make parameters match for WebChromeClient::addMessageToConsole()

        Reviewed by John.

        * WebCoreSupport/WebChromeClient.h:
        (WebChromeClient::addMessageToConsole): Renamed sourceID parameter
        to sourceURL to match implementation in WebChromeClient.mm.
